# package-manager

./: README.md  TODO.md  pyproject.toml
.github/workflows/: workflow.yml
scripts/: publish-pypi.sh
src/omegaxiv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/omegaxiv_manager/: __init__.py  cli.py  registry.py  state.py
tests/: test_cl_act_resolution.py  test_state_store.py
