[project]
name = "omegaxiv"
version = "0.1.0"
description = "omegaXiv package manager CLI."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ox = "omegaxiv_manager.cli:main"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
