[project]
name = "omegaxiv"
version = "0.1.0"
description = "omegaXiv package manager CLI."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "omegaXiv Labs"}]
urls = {Homepage = "https://github.com/omegaXiv-labs/package-manager"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.optional-dependencies]
publish = ["build>=1.2.2", "twine>=6.0.1"]

[project.scripts]
ox = "omegaxiv_manager.cli:main"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
